--- a/frontend/groupomania/src/sass/index.css
+++ b/frontend/groupomania/src/sass/index.css
@@ -18,7 +18,7 @@
 
 .card {
   width: 22rem;
-  height: 10rem;
+  height: 15rem;
   top: 15rem;
   margin-left: auto;
   margin-right: auto;
@@ -48,11 +48,9 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
-form label {
+  align-items: left;
   margin-left: 1rem;
 }
-form input {
-  margin-left: 2rem;
+form div {
+  margin-top: 0.2rem;
 }/*# sourceMappingURL=index.css.map */
