--- a/frontend/groupomania/src/sass/pages/home.scss
+++ b/frontend/groupomania/src/sass/pages/home.scss
@@ -23,3 +23,12 @@ nav {
   margin-top: 20rem;
   margin-left: 10rem;
 }
+.post {
+  margin-top: 12rem;
+  margin-left: 10rem;
+}
+
+.createPost {
+  margin-top: 10rem;
+  margin-left: 30rem;
+}
