--- a/frontend/groupomania/src/sass/index.css
+++ b/frontend/groupomania/src/sass/index.css
@@ -62,6 +62,16 @@ nav {
   justify-content: space-between;
 }
 
+.links {
+  width: 25%;
+  height: auto;
+  margin-right: 5rem;
+  margin-top: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
 .logo-home {
   margin: 1rem 0 0 1rem;
 }
