--- a/frontend/groupomania/src/sass/index.scss
+++ b/frontend/groupomania/src/sass/index.scss
@@ -1,3 +1,8 @@
 @import "./base/reset.scss";
-@import "./pages/acceuil.scss";
+@import "./components/button.scss";
+@import "./components/logo.scss";
+@import "./components/navbar.scss";
+@import "./components/formLoginRegister.scss";
+@import "./pages/loginRegister.scss";
+
 @import "./pages/home.scss";
