--- a/frontend/groupomania/src/sass/pages/home.scss
+++ b/frontend/groupomania/src/sass/pages/home.scss
@@ -1,23 +1,23 @@
-nav {
-  height: 5rem;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
+// nav {
+//   height: 5rem;
+//   width: 100%;
+//   display: flex;
+//   justify-content: space-between;
+// }
 
-.links {
-  width: 25%;
-  height: auto;
-  margin-right: 5rem;
-  margin-top: 2rem;
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
+// .links {
+//   width: 25%;
+//   height: auto;
+//   margin-right: 5rem;
+//   margin-top: 2rem;
+//   align-items: center;
+//   display: flex;
+//   justify-content: space-between;
+// }
 
-.logo-home {
-  margin: 1rem 0 0 1rem;
-}
+// .logo-home {
+//   margin: 1rem 0 0 1rem;
+// }
 
 .div {
   margin-top: 20rem;
